Client routing and some styles

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -6,3 +6,6 @@ $text-color: #4e4e50;
 $link-color: $primary-color;
 $button-background-color: $primary-color;
 $button-text-color: #fff;
+
+//Font
+$default-font-size: 1.6rem;
