--- a/client/src/main.module.scss
+++ b/client/src/main.module.scss
@@ -2,3 +2,4 @@
 @import "./styles/mixins.scss";
 @import "./styles/variables.scss";
 @import "./styles/base.scss";
+@import "./styles/default.scss";
