--- a/client/src/pages/TaskPage/TaskPage.module.scss
+++ b/client/src/pages/TaskPage/TaskPage.module.scss
@@ -1,4 +1,15 @@
 @import "../../styles/mixins.scss";
+@import "../../styles/variables.scss";
+
+.title {
+  position: absolute;
+  font-size: 3rem;
+  top: 10%;
+  left: 20%;
+  color: $primary-color;
+  display: flex;
+  justify-content: center;
+}
 .container {
   height: 100vh;
   width: 80%;
