--- a/client/src/components/tasks/TaskContainer/TaskContainer.module.scss
+++ b/client/src/components/tasks/TaskContainer/TaskContainer.module.scss
@@ -1,5 +1,5 @@
 @import "../../../styles/mixins";
-
+@import "../../../styles/variables";
 .col {
   width: 30%;
   padding: 4rem;
@@ -8,7 +8,13 @@
   border-radius: 10px;
 
   @include respond(tab-port) {
-    width: 70%;
+    width: 100%;
     margin: 5rem 0;
   }
+}
+
+.title {
+  margin: -1.5rem 0 2rem 0;
+  text-align: center;
+  color: $primary-color;
 }
