--- a/client/src/components/tasks/TaskItem/Task.module.scss
+++ b/client/src/components/tasks/TaskItem/Task.module.scss
@@ -1,4 +1,10 @@
+@import "../../../styles/variables";
 .task {
+  margin: 0.5rem 0;
+  text-align: center;
+  background-color: white;
+  border: 3px solid $primary-color;
+  border-radius: 10px;
   width: 100%;
   cursor: pointer;
 }
