--- a/client/src/components/tasks/TaskModalContent/TaskModalContent.module.scss
+++ b/client/src/components/tasks/TaskModalContent/TaskModalContent.module.scss
@@ -1,27 +1,26 @@
 @import "../../../styles/variables.scss";
 
 .background {
+  overflow: auto;
   height: 100%;
   width: 100%;
   background-color: darken($color: $background-color, $amount: 2);
-
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba($background-color, 0.7);
 }
 
 .container {
-  padding: 10rem;
-  height: 30rem;
   width: 100%;
-  max-width: 50rem;
+  max-width: 80rem;
 
-  background-color: $secondary-color;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-color: darken($color: $background-color, $amount: 1);
+  position: relative;
+  top: 5rem;
+  left: 20%;
+
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
 
@@ -35,17 +34,35 @@
   margin-bottom: 1.5rem;
 }
 
+.header {
+  padding: 1rem;
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px solid white;
+}
+
 .name {
   color: white;
   text-transform: uppercase;
+
+  display: flex;
+  justify-content: first baseline;
+  align-items: center;
 }
 
-.field {
-  padding: 1rem;
-  font-family: inherit;
-  font-size: inherit;
-  color: white;
-  border: none;
-  background-color: $background-color;
-  border-radius: 10px;
+.status {
+  color: $primary-color;
+  text-transform: uppercase;
+
+  display: flex;
+  justify-content: first baseline;
+  align-items: center;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
 }
