--- a/client/src/pages/TaskPage/TaskPage.module.scss
+++ b/client/src/pages/TaskPage/TaskPage.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/variables.scss";
 
 .container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,13 +10,25 @@
 }
 .title {
   margin: 12rem 0 6rem 0;
-  color: $primary-color;
+  color: white;
   display: flex;
   justify-content: center;
 }
+
+.header {
+  padding: 0 3rem;
+  margin-bottom: 3rem;
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  background-color: $secondary-color;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
 .task_container {
   height: calc(100% - 10rem);
-  width: 80%;
+  width: calc(80% + 3rem);
   margin: auto;
   display: flex;
   flex-direction: row;
