--- a/client/src/components/tasks/TaskModalContent/TaskModalContent.module.scss
+++ b/client/src/components/tasks/TaskModalContent/TaskModalContent.module.scss
@@ -38,13 +38,20 @@
   padding: 1rem;
   width: 100%;
 
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   border-bottom: 1px solid white;
 }
 
+.title {
+  display: flex;
+  flex-direction: row;
+}
+
 .name {
+  margin-right: 5rem;
   color: white;
   text-transform: uppercase;
 
