--- a/client/src/components/shared/Pagination/Pagination.module.scss
+++ b/client/src/components/shared/Pagination/Pagination.module.scss
@@ -8,15 +8,23 @@
 }
 
 .pagination li {
-  cursor: pointer;
   padding: 5px 10px;
-  margin-right: 5px;
-  border: 1px solid #ccc;
+  margin: 0 2.5px;
+  width: 3rem;
+  height: 3rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+  border: 1px solid white;
   border-radius: 3px;
 }
 
 .pagination li:hover {
-  background-color: #f5f5f5;
+  background-color: white;
+  color: $text-color;
 }
 
 .pagination .active {
