--- a/client/src/components/tasks/TaskSideBar/TaskSideBar.module.scss
+++ b/client/src/components/tasks/TaskSideBar/TaskSideBar.module.scss
@@ -1,8 +1,22 @@
 @import "../../../styles/variables.scss";
+@import "../../../styles/mixins.scss";
 
 .sidebar {
+  @include respond(tab-land) {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
   padding: 1rem;
   width: 30%;
+}
+
+.date_container {
+  @include respond(tab-land) {
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .highlight {
