--- a/client/src/components/tasks/TaskContainer/TaskContainer.module.scss
+++ b/client/src/components/tasks/TaskContainer/TaskContainer.module.scss
@@ -18,3 +18,16 @@
   text-align: center;
   color: $primary-color;
 }
+
+.input {
+  padding: 0 2rem;
+  width: 100%;
+  height: 4rem;
+
+  font-family: inherit;
+  color: $text-color;
+  font-size: inherit;
+
+  border: 3px solid $primary-color;
+  border-radius: 10px;
+}
