--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -20,13 +20,12 @@ button {
 
   &:hover {
     transition: all 0.3s ease;
-    transform: scale(1.03) translateY(4px);
     box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.3);
+    background-color: darken($color: $primary-color, $amount: 12);
   }
 
   &:active {
     box-shadow: 4px 2px 6px rgba(0, 0, 0, 0.3);
-    transform: scale(1) translateY(8px);
   }
 }
 
