--- a/client/src/components/project/ProjectModalContent/ModalContent.module.scss
+++ b/client/src/components/project/ProjectModalContent/ModalContent.module.scss
@@ -1,34 +1,48 @@
 @import "../../../styles/variables.scss";
+@import "../../../styles/mixins.scss";
 
 .background {
+  overflow: auto;
   height: 100%;
   width: 100%;
   background-color: darken($color: $background-color, $amount: 2);
-
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba($background-color, 0.7);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
-  padding: 10rem;
-  height: 30rem;
+  padding: 5rem;
   width: 100%;
-  max-width: 50rem;
+  max-width: 80rem;
+  min-width: 30rem;
 
-  background-color: $secondary-color;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-color: darken($color: $background-color, $amount: 1);
+  position: relative;
+
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
 
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  justify-content: space-between;
+  justify-content: center;
+
+  @include respond(tab-port) {
+    position: absolute;
+    left: 0;
+  }
+
+  @include respond(tab-land) {
+    position: absolute;
+    left: 5%;
+  }
 }
 
 .container > * {
@@ -48,4 +62,15 @@
   border: none;
   background-color: $background-color;
   border-radius: 10px;
+}
+
+.btn {
+  border: 3px solid transparent;
+  border-radius: 5px;
+  transition: all 0.8s ease-out;
+  &:hover {
+    cursor: pointer;
+    background-color: white;
+    border: 3px solid $primary-color;
+  }
 }
