--- a/client/src/components/tasks/TaskItem/Task.module.scss
+++ b/client/src/components/tasks/TaskItem/Task.module.scss
@@ -2,9 +2,25 @@
 .task {
   margin: 0.5rem 0;
   text-align: center;
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   background-color: white;
   border: 3px solid $primary-color;
   border-radius: 10px;
-  width: 100%;
+
   cursor: pointer;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+}
+
+.count {
+  font-size: 2rem;
+  margin-right: 3rem;
 }
