--- a/client/src/components/shared/DropDown/DropDown.module.scss
+++ b/client/src/components/shared/DropDown/DropDown.module.scss
@@ -1,8 +1,8 @@
 @import "../../../styles/variables.scss";
 
 .dropdown {
-  position: relative;
-
+  position: absolute;
+  left: 50%;
   &_toggle {
     font-family: inherit;
     color: white;
@@ -16,7 +16,7 @@
   &_menu {
     position: absolute;
     top: 100%;
-    left: 30%;
+    left: 50%;
     width: 12rem;
     padding: 10px;
     background-color: $primary-color;
