--- a/client/src/components/shared/Textarea/Textarea.module.scss
+++ b/client/src/components/shared/Textarea/Textarea.module.scss
@@ -1,8 +1,7 @@
 .textarea {
   margin: 1rem 0;
   padding: 1rem;
-  height: 20%;
-
+  overflow: hidden;
   background-color: inherit;
   resize: none;
 
