--- a/client/src/pages/TaskPage/TaskPage.module.scss
+++ b/client/src/pages/TaskPage/TaskPage.module.scss
@@ -9,7 +9,7 @@
   align-items: center;
 }
 .title {
-  margin: 12rem 0 6rem 0;
+  margin: 10rem 0 8rem 0;
   color: white;
   display: flex;
   justify-content: center;
@@ -20,6 +20,8 @@
   margin-bottom: 3rem;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
   width: 80%;
   background-color: $secondary-color;
   border-bottom-left-radius: 10px;
