--- a/client/src/components/tasks/TaskForm/TaskForm.module.scss
+++ b/client/src/components/tasks/TaskForm/TaskForm.module.scss
@@ -7,3 +7,14 @@
 
   color: white;
 }
+
+.grid_container {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 3fr));
+  grid-auto-rows: auto;
+  column-gap: 1rem;
+}
+
+.grid_item {
+  width: auto;
+}
