--- a/client/src/components/shared/Icons/IconAdd/Icon.module.scss
+++ b/client/src/components/shared/Icons/IconAdd/Icon.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@import "../../../../styles/variables.scss";
 .icon {
   cursor: pointer;
   height: 4rem;
