recreating architecture/done

--- a/client/src/widgets/TaskContainer/TaskContainer.module.scss
+++ b/client/src/widgets/TaskContainer/TaskContainer.module.scss
@@ -1,5 +1,6 @@
-@import "../../../shared/styles/variables.scss";
-@import "../../../shared/styles/mixins.scss";
+@import "../../shared/styles/variables.scss";
+@import "../../shared/styles/mixins.scss";
+
 .col {
   width: 30%;
   padding: 4rem;
